Fix (mobile) : stop overflow of the popup

--- a/nos-recettes-front/src/pages/Home/Recipes/recipes.scss
+++ b/nos-recettes-front/src/pages/Home/Recipes/recipes.scss
@@ -6,7 +6,7 @@
 @use '../../../style/sass/mixins' as m;
 
 .recipes {
-	@include m.flex(column, v.$default, v.$default, v.$default);
+	@include m.flex(column);
 	gap: 3.5rem 4rem;
 	@include m.desktop {
 		display: grid;
