--- a/nos-recettes-front/src/pages/Home/home.scss
+++ b/nos-recettes-front/src/pages/Home/home.scss
@@ -15,6 +15,7 @@
 	width: 100%;
 	margin:auto;
 	max-width: 1100px;
+    overflow: hidden;
 	&__title {
 		padding: 2.4rem 0;
 		font-size: 1.3rem;
